--- a/Fitness3 App/app/build.gradle
+++ b/Fitness3 App/app/build.gradle
@@ -1,11 +1,19 @@
+buildscript {
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.8.0"
+    }
+}
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlinx-serialization'
 }
 
 android {
+
     namespace 'com.example.solanatry2'
-    compileSdk 33
+    compileSdk 34
 
     buildFeatures {
         viewBinding true
@@ -14,10 +22,11 @@ android {
 
     defaultConfig {
         applicationId "com.example.solanatry2"
-        minSdk 24
+        minSdk 26
         targetSdk 32
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -32,8 +41,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -61,6 +70,11 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.0'
+    implementation 'com.google.android.datatransport:transport-runtime:3.1.9'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -73,4 +87,41 @@ dependencies {
     implementation("com.solanamobile:mobile-wallet-adapter-clientlib-ktx:1.1.0")
     // data store
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation 'com.android.support:multidex:1.0.3'
+
+    //graph chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
+    // circular progress bar
+    implementation 'com.github.antonKozyriatskyi:CircularProgressIndicator:1.3.0'
+
+    // ktor dependency
+    def ktor_version = '1.6.4'
+    implementation "io.ktor:ktor-client-core:$ktor_version"
+
+// HTTP engine: The HTTP client used to perform network requests.
+
+    implementation "io.ktor:ktor-client-android:$ktor_version"
+
+// The serialization engine used to convert objects to and from JSON.
+    implementation "io.ktor:ktor-client-serialization:$ktor_version"
+
+// Logging
+    implementation "io.ktor:ktor-client-logging:$ktor_version"
+
+    def serialization_version = '1.3.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serialization_version"
+
+    //play pause button
+    implementation 'com.github.Romancha:android-material-play-pause-view-button:2.3'
+    implementation("com.google.code.gson:gson:2.9.0") // Gradle KTS
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    // jackson json parsers
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.10.1'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.10.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
+
 }
