--- a/Fitness3 App/app/src/main/AndroidManifest.xml
+++ b/Fitness3 App/app/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -11,7 +15,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SolanaTry2"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".home.MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_home_page"
+            android:theme="@style/Theme.SolanaTry2" />
         <activity
             android:name=".login.LoginActivity"
             android:exported="false"
@@ -19,7 +28,7 @@
             android:theme="@style/Theme.SolanaTry2" />
         <activity
             android:name=".onboarding.OnBoardingActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,6 +39,11 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <service
+            android:name=".servicesandbroadcastreceivers.StepCounterService"
+            android:enabled="true"
+            android:exported="false" />
+
     </application>
 
 </manifest>
