cNFT bugs fixed, audius bugs fixed, app working as expected

--- a/Fitness3 App/app/build.gradle
+++ b/Fitness3 App/app/build.gradle
@@ -124,4 +124,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.10.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.1'
 
+    // gif dependency
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
+
 }
