--- a/Fitness3 App/app/src/main/AndroidManifest.xml
+++ b/Fitness3 App/app/src/main/AndroidManifest.xml
@@ -4,15 +4,16 @@
 
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon_squared"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_icon_squared"
         android:supportsRtl="true"
         android:theme="@style/Theme.SolanaTry2"
         tools:targetApi="31">
@@ -24,6 +25,7 @@
         <activity
             android:name=".login.LoginActivity"
             android:exported="false"
+            android:windowSoftInputMode="adjustResize"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.SolanaTry2" />
         <activity
